Fat Rat Edition:
you can select a page and the program automatically assigns the first and last row

--- a/FormatterGui/FormatterGui.csproj
+++ b/FormatterGui/FormatterGui.csproj
@@ -23,6 +23,8 @@
 
   <ItemGroup>
     <Content Include="bin\errorcats\Pop cat closed.ico" />
+    <Content Include="bin\NOK.png" />
+    <Content Include="bin\OK.png" />
   </ItemGroup>
 
   <ItemGroup>
